# mainchar

./: Cargo.toml
crates/lexicon-ty/: Cargo.toml
crates/lexicon-ty/src/: lib.rs
crates/lexicon-ty/tests/: parse.rs
xtask/: Cargo.toml
