[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
authors = ["Bryant Luk <code@bryantluk.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.82.0"

[workspace.dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive", "env"] }
proc-macro2 = "1.0.89"
quote = "1.0.37"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
strum = "0.26.3"
strum_macros = "0.26.4"
xshell = "0.2.7"

[workspace.lints.rust]
bare_trait_objects = "warn"
elided_lifetimes_in_paths = "warn"
ellipsis_inclusive_range_patterns = "warn"
explicit_outlives_requirements = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"
semicolon_in_expressions_from_macros = "warn"
unreachable_pub = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
